# MBML-TrueSkill-Formula-1

./: .gitignore  CLAUDE.md  CURRENT_TASK.md  DTU_MBML_Project_Guidelines.md  F1_PGM_Evaluation.ipynb  README.md  SPEC.md  coding_behavior.md  main.py  model_idea.md  pyproject.toml  reddit_f1_post.md  skills-lock.json
.opencode/commands/: build.md  review.md
data_enrichment/: README.md  __init__.py  enrich_features.py  fetch_weather.py  run_enrichment.py  weather_cache.csv
data_preprocessing/: build_f1_model_data.py  f1_enriched.csv  f1_model_ready.csv  read_columns.py
evaluation/: README.md  __init__.py  baselines.py  metrics.py  reporter.py  run_evaluation.py  validator.py
exploration/: README.md  __init__.py  analysis.py  f1_data_exploration.py  visualisations.py
models/: README.md  __init__.py  f1_trueskill_baseline.py
models/pgm_backend/: __init__.py  data_preparation.py  inference.py  likelihood.py  model_baseline.py  model_extended.py  model_full.py  posterior.py  run_pgm.py
models/pyro_backend/: README.md  __init__.py  data_preparation.py  pyro_evaluator.py  pyro_model.py  run_pyro_model.py
outputs/evaluation/: metrics_summary.csv  metrics_summary_pivoted.csv  validation_report.md
outputs/history/: driver_rating_history.csv
outputs/pgm_model/: baseline_posterior.csv  extended_posterior.csv  full_posterior.csv  nuts_vs_svi_comparison.csv
outputs/pyro_model/: coefficients_static.csv  constructor_ratings_static.csv  (+2 more)
prompts/: prompt_01.md  prompt_02.md
tasks/: handoff_log.md  issues_to_investigate.md  plan.md  report_notes.md  todo.md
(+5 files in other folders)
